Updated first steps notebook

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -54,7 +54,21 @@
    "source": [
     "### 2.1 Create a Database Table\n",
     "\n",
-    "We will use JupySQL to create a database table but other sections will use the table, too:"
+    "We will use JupySQL to create 2 database tables but other sections will use the tables, too:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a7f5ec4-10f3-49e8-a6e4-48552a760542",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "CREATE OR REPLACE TABLE US_AIRLINES (\n",
+    "        OP_CARRIER_AIRLINE_ID DECIMAL(10, 0) IDENTITY PRIMARY KEY,\n",
+    "        CARRIER_NAME VARCHAR(1000)\n",
+    ");"
    ]
   },
   {
@@ -109,13 +123,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%sql --save udf_output\n",
+    "%%sql\n",
     "import INTO US_AIRLINES FROM \n",
     "  CSV AT 'https://dut5tonqye28.cloudfront.net/ai_lab/flight-info/' \n",
     "  FILE 'US_AIRLINES.csv'\n",
     "  COLUMN SEPARATOR = ','\n",
     "  ROW SEPARATOR = 'CRLF'\n",
-    "  COLUMN DELIMITER = '\"'  \n",
+    "  COLUMN DELIMITER = '\"'\n",
     "  SKIP=1;"
    ]
   },
@@ -134,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%sql --save udf_output\n",
+    "%%sql\n",
     "import INTO US_FLIGHTS \n",
     "    FROM CSV AT 'https://dut5tonqye28.cloudfront.net/ai_lab/first_steps/' \n",
     "    FILE 'US_FLIGHTS_FEB_2024-fixed-booleans.csv'\n",
@@ -191,9 +205,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%sql --save udf_output\n",
+    "%%sql\n",
     "CREATE OR REPLACE CONNECTION AI_LAB_FIRST_STEPS_S3\n",
     "    TO 'https://ai-lab-example-data-s3.s3.eu-central-1.amazonaws.com';"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23507a42-9459-4446-af7f-7d4f65294242",
+   "metadata": {},
+   "source": [
+    "Alternatively the connection can also use the following URL syntax:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "945dc2dd-8722-4455-b77e-cf6ad88eea23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "CREATE OR REPLACE CONNECTION AI_LAB_FIRST_STEPS_S3 TO 's3://ai-lab-example-data-s3';"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e118dd1a-40e6-412a-8624-314e7de1f893",
+   "metadata": {},
+   "source": [
+    "Then we will remove the data imported before:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9ba8cad-8451-4f7a-8dec-3d04950d88b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "TRUNCATE TABLE US_FLIGHTS;"
    ]
   },
   {
@@ -207,14 +259,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "415b79f7-29b2-466f-8914-5f786f2821cc",
+   "id": "8aa97292-b0e5-441b-a961-a3d1fba6d23e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%sql --save udf_output\n",
-    "IMPORT INTO SALES\n",
+    "%%sql\n",
+    "IMPORT INTO US_FLIGHTS\n",
     "    FROM PARQUET AT AI_LAB_FIRST_STEPS_S3\n",
-    "    FILE 'first_steps/remote.parquet';"
+    "    FILE 'first_steps/US_FLIGHTS_FEB_2024.parquet';"
    ]
   },
   {
@@ -222,7 +274,7 @@
    "id": "b074a883-ae21-479c-b4fa-17962afe8149",
    "metadata": {},
    "source": [
-    "We will query table `SALES` again to display the imported data:"
+    "We will query table `US_FLIGHTS` again to display the imported data:"
    ]
   },
   {
@@ -232,8 +284,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%sql --save udf_output\n",
-    "SELECT * FROM SALES where comment='remote parquet'"
+    "%%sql\n",
+    "SELECT * FROM US_FLIGHTS;"
    ]
   },
   {
@@ -245,7 +297,7 @@
     "\n",
     "### 3.1 Importing a CSV File From the Local Filesystem\n",
     "\n",
-    "This section demonstrates how to import a CSV file from the local file system into the database.\n",
+    "This section demonstrates how to import a CSV file from the local file system into the database using pyexasol.\n",
     "\n",
     "Function `open_pyexasol_connection()` opens a connection, based on the Secure Configuration Storage (SCS)."
    ]
@@ -258,11 +310,36 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
+    "from exasol.nb_connector.connections import open_pyexasol_connection\n",
     "\n",
     "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
-    "    path = Path(\"local.csv\")\n",
-    "    import_params = {\"column_separator\": \";\"}\n",
-    "    conn.import_from_file(path, (ai_lab_config.db_schema, \"SALES\"), import_params)"
+    "    path = Path(\"first_steps/pyexasol.csv\")\n",
+    "    import_params = {\n",
+    "        \"column_delimiter\": '\"',\n",
+    "        \"column_separator\": \",\",\n",
+    "        \"row_separator\": \"CRLF\",\n",
+    "        \"skip\": 1,\n",
+    "    }\n",
+    "    conn.import_from_file(path, (ai_lab_config.db_schema, \"US_AIRLINES\"), import_params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e023d10d-ccdb-4c2d-8fa5-655e227e8c76",
+   "metadata": {},
+   "source": [
+    "Let's verify successful import:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a773a861-8399-4a17-9fe7-d1ac2e960f7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "select * from US_AIRLINES where CARRIER_NAME like '% via pyexasol'"
    ]
   },
   {
@@ -272,21 +349,52 @@
    "source": [
     "### 3.2 Importing a CSV File From Remote\n",
     "\n",
-    "This section demonstrates how to import a CSV file from a remote source into the database."
+    "This section demonstrates how to import a CSV file from a remote source into the database using pyexasol.\n",
+    "\n",
+    "First we will truncate table `US_AIRLINES`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "450fbedb-e070-4821-a8df-00cc964075d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "truncate table US_AIRLINES;"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a8079523-7ad7-444c-84b2-5245cbee5ab8",
+   "id": "9c96353d-4431-4cf3-99d2-0e5356721886",
    "metadata": {},
    "source": [
-    "This does not work as import from local is only possible when using a JDBC driver.\n",
+    "Next we will import the US airlines again:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04364f78-a1f2-49ec-9ec9-959a2604a044",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from exasol.nb_connector.connections import open_pyexasol_connection\n",
     "\n",
-    "```\n",
-    "%%sql \n",
-    "import INTO \"{{ai_lab_config.db_schema}}\".\"SALES\"\n",
-    "FROM LOCAL csv file 'sample.csv' COLUMN separator = ';'\n",
-    "```"
+    "sql = f\"\"\"\n",
+    "    import INTO \"{ai_lab_config.db_schema}\".\"US_AIRLINES\" FROM \n",
+    "    CSV AT 'https://dut5tonqye28.cloudfront.net/ai_lab/flight-info/' \n",
+    "    FILE 'US_AIRLINES.csv'\n",
+    "    COLUMN SEPARATOR = ','\n",
+    "    ROW SEPARATOR = 'CRLF'\n",
+    "    COLUMN DELIMITER = '\"'\n",
+    "    SKIP=1;\n",
+    "\"\"\"\n",
+    "\n",
+    "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
+    "    result = conn.execute(sql)\n",
+    "    print(f\"Imported {result.rowcount()} rows.\")"
    ]
   },
   {
@@ -294,13 +402,78 @@
    "id": "61b8024f-69c1-4247-ab5a-946d5e98fe2b",
    "metadata": {},
    "source": [
-    "## 4. SQL Alchemy"
+    "## 4. SQL Alchemy\n",
+    "\n",
+    "### 3.1 Importing a CSV File From the Local Filesystem\n",
+    "\n",
+    "This section demonstrates how to import a CSV file from the local file system into the database using SQL Alchemy.\n",
+    "\n",
+    "Function `open_sqlalchemy_connection()` return a SQL Alchemy engine, based on the Secure Configuration Storage (SCS)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "632a9139-f8e1-45bd-8ea8-43571d2ee3f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from exasol.nb_connector.connections import open_sqlalchemy_connection\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"first_steps/sqlalchemy.csv\", header=1)\n",
+    "print(df)\n",
+    "\n",
+    "engine = open_sqlalchemy_connection(ai_lab_config)\n",
+    "print(engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "722307a9-1064-485f-8765-5b8a518016ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from exasol.nb_connector.connections import open_sqlalchemy_connection\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"first_steps/sqlalchemy.csv\", header=1)\n",
+    "engine = open_sqlalchemy_connection(ai_lab_config)\n",
+    "# with engine.connect() as conn:\n",
+    "df.to_sql(\"XUS_AIRLINES\", engine, schema=ai_lab_config.db_schema, if_exists=\"append\")\n",
+    "# print(f\"Imported {rows} rows.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9c7e497-cf0a-4158-b656-221a80086a90",
+   "metadata": {},
+   "source": [
+    "### 3.2 Importing a CSV File From Remote\n",
+    "\n",
+    "This section demonstrates how to import a CSV file from a remote source into the database using SQL Alchemy.\n",
+    "\n",
+    "First we will truncate table `US_AIRLINES`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b831c676-b307-4af0-9b55-0ad563cfdeec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "SELECT * FROM US_AIRLINES;"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "768ca230-817c-4226-a1b6-ac5c32d4b1c7",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 5. Using the Exasol Bucket File System\n",
     "\n",
