Updated sample data and first steps notebook

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -339,7 +339,7 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "select * from US_AIRLINES where CARRIER_NAME like '% via pyexasol'"
+    "select * from US_AIRLINES where CARRIER_NAME like '% local CSV file via pyexasol'"
    ]
   },
   {
@@ -351,7 +351,7 @@
     "\n",
     "This section demonstrates how to import a CSV file from a remote source into the database using pyexasol.\n",
     "\n",
-    "First we will truncate table `US_AIRLINES`:"
+    "First we will truncate table `US_FLIGHTS`:"
    ]
   },
   {
@@ -362,7 +362,7 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "truncate table US_AIRLINES;"
+    "truncate table US_FLIGHTS"
    ]
   },
   {
@@ -370,7 +370,7 @@
    "id": "9c96353d-4431-4cf3-99d2-0e5356721886",
    "metadata": {},
    "source": [
-    "Next we will import the US airlines again:"
+    "Next we will import the flight data again:"
    ]
   },
   {
@@ -385,11 +385,11 @@
     "sql = f\"\"\"\n",
     "    import INTO \"{ai_lab_config.db_schema}\".\"US_AIRLINES\" FROM \n",
     "    CSV AT 'https://dut5tonqye28.cloudfront.net/ai_lab/flight-info/' \n",
-    "    FILE 'US_AIRLINES.csv'\n",
+    "    FILE 'US_FLIGHTS_FEB_2024-fixed-booleans.csv'\n",
     "    COLUMN SEPARATOR = ','\n",
     "    ROW SEPARATOR = 'CRLF'\n",
     "    COLUMN DELIMITER = '\"'\n",
-    "    SKIP=1;\n",
+    "    SKIP = 1;\n",
     "\"\"\"\n",
     "\n",
     "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
@@ -419,13 +419,36 @@
    "outputs": [],
    "source": [
     "from exasol.nb_connector.connections import open_sqlalchemy_connection\n",
-    "import pandas as pd\n",
-    "\n",
-    "df = pd.read_csv(\"first_steps/sqlalchemy.csv\", header=1)\n",
-    "print(df)\n",
-    "\n",
-    "engine = open_sqlalchemy_connection(ai_lab_config)\n",
-    "print(engine)"
+    "engine = open_sqlalchemy_connection(ai_lab_config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "729c3c2e-03a0-497b-83f3-44794285daf4",
+   "metadata": {},
+   "source": [
+    "Experiments with SQL ALchemy - to be deleted before merging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79747c3f-ace6-4afe-b016-5facd827614f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with engine.connect() as conn:\n",
+    "    result = conn.execute(\"SELECT * from AI_LAB.US_AIRLINES\")\n",
+    "print(result.fetchall())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a040c276-2388-426b-a6e5-e2f3e1c7ec1d",
+   "metadata": {},
+   "source": [
+    "Import via pandas `to_sql()` using an SQL Alchemy engine or connection as paramter\n",
+    "-- currently failing"
    ]
   },
   {
@@ -440,9 +463,28 @@
     "\n",
     "df = pd.read_csv(\"first_steps/sqlalchemy.csv\", header=1)\n",
     "engine = open_sqlalchemy_connection(ai_lab_config)\n",
-    "# with engine.connect() as conn:\n",
-    "df.to_sql(\"XUS_AIRLINES\", engine, schema=ai_lab_config.db_schema, if_exists=\"append\")\n",
+    "with engine.connect() as conn:\n",
+    "    df.to_sql(\"US_AIRLINES\", conn, schema=ai_lab_config.db_schema, if_exists=\"append\")\n",
     "# print(f\"Imported {rows} rows.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad03b282-35d5-485a-9624-92c92aeea6a9",
+   "metadata": {},
+   "source": [
+    "Let's show the imported rows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "256147f5-44b0-4416-ad40-033973e694c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "select * from US_AIRLINES where CARRIER_NAME like '% local CSV file via SQL Alchemy'"
    ]
   },
   {
@@ -454,7 +496,7 @@
     "\n",
     "This section demonstrates how to import a CSV file from a remote source into the database using SQL Alchemy.\n",
     "\n",
-    "First we will truncate table `US_AIRLINES`:"
+    "First we will truncate table `US_FLIGHTS` again:"
    ]
   },
   {
@@ -465,15 +507,41 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "SELECT * FROM US_AIRLINES;"
+    "truncate table US_FLIGHTS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d228759-c857-4b28-8b93-ca9baae3bc54",
+   "metadata": {},
+   "source": [
+    "Next we will import the flight data again:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bce8489-e920-43ce-a9fc-3aee01ba6cb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://dut5tonqye28.cloudfront.net/ai_lab/flight-info/\"\n",
+    "with engine.connect() as conn:\n",
+    "    result = conn.execute(\n",
+    "        f\"IMPORT AI_LAB.US_FLIGHTS CSV AT '{url}'\"\n",
+    "        \" FILE 'US_FLIGHTS_FEB_2024-fixed-booleans.csv'\"\n",
+    "        \" COLUMN SEPARATOR = ','\"\n",
+    "        \" ROW SEPARATOR = 'CRLF'\"\n",
+    "        \" COLUMN DELIMITER = '\\\"'\"\n",
+    "        \" SKIP = 1\"\n",
+    "    )\n",
+    "print(result.rowcount())"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "768ca230-817c-4226-a1b6-ac5c32d4b1c7",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 5. Using the Exasol Bucket File System\n",
     "\n",
