Updated first steps notebook

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -124,13 +124,13 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "import INTO US_AIRLINES FROM \n",
+    "IMPORT INTO US_AIRLINES FROM \n",
     "  CSV AT 'https://dut5tonqye28.cloudfront.net/ai_lab/flight-info/' \n",
     "  FILE 'US_AIRLINES.csv'\n",
     "  COLUMN SEPARATOR = ','\n",
     "  ROW SEPARATOR = 'CRLF'\n",
     "  COLUMN DELIMITER = '\"'\n",
-    "  SKIP=1;"
+    "  SKIP = 1;"
    ]
   },
   {
@@ -149,11 +149,11 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "import INTO US_FLIGHTS \n",
+    "IMPORT INTO US_FLIGHTS \n",
     "    FROM CSV AT 'https://dut5tonqye28.cloudfront.net/ai_lab/first_steps/' \n",
     "    FILE 'US_FLIGHTS_FEB_2024-fixed-booleans.csv'\n",
     "    (1 FORMAT = 'MM/DD/YYYY HH12:MI:SS AM', 2..21)    \n",
-    "    SKIP=1;"
+    "    SKIP = 1;"
    ]
   },
   {
@@ -375,25 +375,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "04364f78-a1f2-49ec-9ec9-959a2604a044",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[34], line 13\u001b[0m\n\u001b[1;32m      3\u001b[0m import_remote_csv_sql \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;124m    IMPORT INTO \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mai_lab_config\u001b[38;5;241m.\u001b[39mdb_schema\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUS_FLIGHTS\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m FROM \u001b[39m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;124m    CSV AT \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://dut5tonqye28.cloudfront.net/ai_lab/first_steps/\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;124m    SKIP = 1\u001b[39m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m open_pyexasol_connection(ai_lab_config, compression\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m) \u001b[38;5;28;01mas\u001b[39;00m conn:\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;66;03m# result = conn.execute(import_remote_csv_sql)\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mImported \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mresult\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrowcount\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m rows.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not callable"
+     ]
+    }
+   ],
    "source": [
     "from exasol.nb_connector.connections import open_pyexasol_connection\n",
     "\n",
-    "sql = f\"\"\"\n",
-    "    import INTO \"{ai_lab_config.db_schema}\".\"US_AIRLINES\" FROM \n",
-    "    CSV AT 'https://dut5tonqye28.cloudfront.net/ai_lab/flight-info/' \n",
+    "import_remote_csv_sql = f\"\"\"\n",
+    "    IMPORT INTO \"{ai_lab_config.db_schema}\".\"US_FLIGHTS\" FROM \n",
+    "    CSV AT 'https://dut5tonqye28.cloudfront.net/ai_lab/first_steps/' \n",
     "    FILE 'US_FLIGHTS_FEB_2024-fixed-booleans.csv'\n",
-    "    COLUMN SEPARATOR = ','\n",
-    "    ROW SEPARATOR = 'CRLF'\n",
-    "    COLUMN DELIMITER = '\"'\n",
-    "    SKIP = 1;\n",
+    "    (1 FORMAT = 'MM/DD/YYYY HH12:MI:SS AM', 2..21) \n",
+    "    SKIP = 1\n",
     "\"\"\"\n",
     "\n",
     "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
-    "    result = conn.execute(sql)\n",
+    "    result = conn.execute(import_remote_csv_sql)\n",
     "    print(f\"Imported {result.rowcount()} rows.\")"
    ]
   },
@@ -439,7 +449,7 @@
    "source": [
     "with engine.connect() as conn:\n",
     "    result = conn.execute(\"SELECT * from AI_LAB.US_AIRLINES\")\n",
-    "print(result.fetchall())"
+    "print(result.fetchone())"
    ]
   },
   {
@@ -501,10 +511,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "b831c676-b307-4af0-9b55-0ad563cfdeec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;exa+websocket://sys:***@192.168.124.221:8563/AI_LAB?ENCRYPTION=Yes&amp;SSLCertificate=SSL_VERIFY_NONE&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'exa+websocket://sys:***@192.168.124.221:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"color: green\">519221 rows affected.</span>"
+      ],
+      "text/plain": [
+       "519221 rows affected."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "++\n",
+       "||\n",
+       "++\n",
+       "++"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "truncate table US_FLIGHTS"
@@ -520,22 +578,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "3bce8489-e920-43ce-a9fc-3aee01ba6cb1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "519221\n"
+     ]
+    }
+   ],
    "source": [
-    "url = \"https://dut5tonqye28.cloudfront.net/ai_lab/flight-info/\"\n",
+    "# reusing variable import_remote_csv_sql defined in pyexasol example above\n",
+    "\n",
     "with engine.connect() as conn:\n",
-    "    result = conn.execute(\n",
-    "        f\"IMPORT AI_LAB.US_FLIGHTS CSV AT '{url}'\"\n",
-    "        \" FILE 'US_FLIGHTS_FEB_2024-fixed-booleans.csv'\"\n",
-    "        \" COLUMN SEPARATOR = ','\"\n",
-    "        \" ROW SEPARATOR = 'CRLF'\"\n",
-    "        \" COLUMN DELIMITER = '\\\"'\"\n",
-    "        \" SKIP = 1\"\n",
-    "    )\n",
-    "print(result.rowcount())"
+    "    result = conn.execute(import_remote_csv_sql)\n",
+    "print(f\"Imported {result.rowcount} rows.\")"
    ]
   },
   {
@@ -559,10 +619,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "30da84a6-c1bd-4159-830e-88a2fa94ec46",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting first_steps/text_file.txt\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile first_steps/text_file.txt\n",
     "Hello World!"
@@ -580,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "7f6ab083-d7db-4e76-8e1d-7cf7ff369c87",
    "metadata": {},
    "outputs": [],
@@ -605,10 +673,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "7597aa88-5c37-4d2d-ae96-be90bf1a5baf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- text_file.txt\n"
+     ]
+    }
+   ],
    "source": [
     "bfs = open_bucketfs_location(ai_lab_config)\n",
     "for p in bfs.iterdir():\n",
@@ -627,10 +703,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "ec2d3b55-04d1-4fc1-a307-383a64eed012",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file in the BucketFS contains:\n",
+      "Hello World!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import exasol.bucketfs as bfs\n",
     "\n",
