Remove SQL Alchemy experiments and updated some sentences

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -299,7 +299,7 @@
     "\n",
     "This section demonstrates how to import a CSV file from the local file system into the database using pyexasol.\n",
     "\n",
-    "Function `open_pyexasol_connection()` opens a connection, based on the Secure Configuration Storage (SCS)."
+    "Function `open_pyexasol_connection()` opens a connection, using the configuration from the SCS."
    ]
   },
   {
@@ -339,7 +339,35 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "select * from US_AIRLINES where CARRIER_NAME like '% local CSV file via pyexasol'"
+    "SELECT * FROM US_AIRLINES WHERE CARRIER_NAME LIKE '% local CSV file via pyexasol'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c96353d-4431-4cf3-99d2-0e5356721886",
+   "metadata": {},
+   "source": [
+    "### 3.2 Importing a CSV File From Remote\n",
+    "\n",
+    "This section demonstrates how to import a CSV file from a remote source into the database using pyexasol.\n",
+    "    \n",
+    "First we define an SQL statement for the remote import:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "e84aae48-30f3-4e6b-ba1a-29644094d1ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import_remote_csv_sql = f\"\"\"\n",
+    "    IMPORT INTO \"{ai_lab_config.db_schema}\".\"US_FLIGHTS\" FROM \n",
+    "    CSV AT 'https://dut5tonqye28.cloudfront.net/ai_lab/first_steps/' \n",
+    "    FILE 'US_FLIGHTS_FEB_2024-fixed-booleans.csv'\n",
+    "    (1 FORMAT = 'MM/DD/YYYY HH12:MI:SS AM', 2..21) \n",
+    "    SKIP = 1\n",
+    "\"\"\""
    ]
   },
   {
@@ -347,11 +375,9 @@
    "id": "feb5f12c-5465-4580-b2ff-87e71f28238c",
    "metadata": {},
    "source": [
-    "### 3.2 Importing a CSV File From Remote\n",
+    "This SQL statement can be reused in other examples.\n",
     "\n",
-    "This section demonstrates how to import a CSV file from a remote source into the database using pyexasol.\n",
-    "\n",
-    "First we will truncate table `US_FLIGHTS`:"
+    "Then we will truncate table `US_FLIGHTS` to be able to import the flight data again:"
    ]
   },
   {
@@ -362,45 +388,25 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "truncate table US_FLIGHTS"
+    "TRUNCATE TABLE US_FLIGHTS"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9c96353d-4431-4cf3-99d2-0e5356721886",
+   "id": "2324056a-65ad-4bfa-b044-d41154547d85",
    "metadata": {},
    "source": [
-    "Next we will import the flight data again:"
+    "Now let's run the import via pyexasol:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "04364f78-a1f2-49ec-9ec9-959a2604a044",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[34], line 13\u001b[0m\n\u001b[1;32m      3\u001b[0m import_remote_csv_sql \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;124m    IMPORT INTO \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mai_lab_config\u001b[38;5;241m.\u001b[39mdb_schema\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUS_FLIGHTS\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m FROM \u001b[39m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;124m    CSV AT \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://dut5tonqye28.cloudfront.net/ai_lab/first_steps/\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;124m    SKIP = 1\u001b[39m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m open_pyexasol_connection(ai_lab_config, compression\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m) \u001b[38;5;28;01mas\u001b[39;00m conn:\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;66;03m# result = conn.execute(import_remote_csv_sql)\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mImported \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mresult\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrowcount\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m rows.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not callable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from exasol.nb_connector.connections import open_pyexasol_connection\n",
-    "\n",
-    "import_remote_csv_sql = f\"\"\"\n",
-    "    IMPORT INTO \"{ai_lab_config.db_schema}\".\"US_FLIGHTS\" FROM \n",
-    "    CSV AT 'https://dut5tonqye28.cloudfront.net/ai_lab/first_steps/' \n",
-    "    FILE 'US_FLIGHTS_FEB_2024-fixed-booleans.csv'\n",
-    "    (1 FORMAT = 'MM/DD/YYYY HH12:MI:SS AM', 2..21) \n",
-    "    SKIP = 1\n",
-    "\"\"\"\n",
     "\n",
     "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
     "    result = conn.execute(import_remote_csv_sql)\n",
@@ -418,7 +424,7 @@
     "\n",
     "This section demonstrates how to import a CSV file from the local file system into the database using SQL Alchemy.\n",
     "\n",
-    "Function `open_sqlalchemy_connection()` return a SQL Alchemy engine, based on the Secure Configuration Storage (SCS)."
+    "Function `open_sqlalchemy_connection()` returns a SQL Alchemy engine, again using the configuration from the SCS."
    ]
   },
   {
@@ -430,71 +436,6 @@
    "source": [
     "from exasol.nb_connector.connections import open_sqlalchemy_connection\n",
     "engine = open_sqlalchemy_connection(ai_lab_config)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "729c3c2e-03a0-497b-83f3-44794285daf4",
-   "metadata": {},
-   "source": [
-    "Experiments with SQL ALchemy - to be deleted before merging"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "79747c3f-ace6-4afe-b016-5facd827614f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with engine.connect() as conn:\n",
-    "    result = conn.execute(\"SELECT * from AI_LAB.US_AIRLINES\")\n",
-    "print(result.fetchone())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a040c276-2388-426b-a6e5-e2f3e1c7ec1d",
-   "metadata": {},
-   "source": [
-    "Import via pandas `to_sql()` using an SQL Alchemy engine or connection as paramter\n",
-    "-- currently failing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "722307a9-1064-485f-8765-5b8a518016ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from exasol.nb_connector.connections import open_sqlalchemy_connection\n",
-    "import pandas as pd\n",
-    "\n",
-    "df = pd.read_csv(\"first_steps/sqlalchemy.csv\", header=1)\n",
-    "engine = open_sqlalchemy_connection(ai_lab_config)\n",
-    "with engine.connect() as conn:\n",
-    "    df.to_sql(\"US_AIRLINES\", conn, schema=ai_lab_config.db_schema, if_exists=\"append\")\n",
-    "# print(f\"Imported {rows} rows.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ad03b282-35d5-485a-9624-92c92aeea6a9",
-   "metadata": {},
-   "source": [
-    "Let's show the imported rows:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "256147f5-44b0-4416-ad40-033973e694c7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "select * from US_AIRLINES where CARRIER_NAME like '% local CSV file via SQL Alchemy'"
    ]
   },
   {
@@ -511,61 +452,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "b831c676-b307-4af0-9b55-0ad563cfdeec",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"None\">Running query in &#x27;exa+websocket://sys:***@192.168.124.221:8563/AI_LAB?ENCRYPTION=Yes&amp;SSLCertificate=SSL_VERIFY_NONE&#x27;</span>"
-      ],
-      "text/plain": [
-       "Running query in 'exa+websocket://sys:***@192.168.124.221:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"color: green\">519221 rows affected.</span>"
-      ],
-      "text/plain": [
-       "519221 rows affected."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "++\n",
-       "||\n",
-       "++\n",
-       "++"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sql\n",
-    "truncate table US_FLIGHTS"
+    "TRUNCATE TABLE US_FLIGHTS"
    ]
   },
   {
@@ -573,23 +466,15 @@
    "id": "7d228759-c857-4b28-8b93-ca9baae3bc54",
    "metadata": {},
    "source": [
-    "Next we will import the flight data again:"
+    "Next we will import the flight data once again, now u"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "3bce8489-e920-43ce-a9fc-3aee01ba6cb1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "519221\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# reusing variable import_remote_csv_sql defined in pyexasol example above\n",
     "\n",
@@ -619,18 +504,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "30da84a6-c1bd-4159-830e-88a2fa94ec46",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting first_steps/text_file.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile first_steps/text_file.txt\n",
     "Hello World!"
@@ -648,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "7f6ab083-d7db-4e76-8e1d-7cf7ff369c87",
    "metadata": {},
    "outputs": [],
@@ -673,18 +550,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "7597aa88-5c37-4d2d-ae96-be90bf1a5baf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "- text_file.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bfs = open_bucketfs_location(ai_lab_config)\n",
     "for p in bfs.iterdir():\n",
@@ -703,20 +572,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "ec2d3b55-04d1-4fc1-a307-383a64eed012",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The file in the BucketFS contains:\n",
-      "Hello World!\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import exasol.bucketfs as bfs\n",
     "\n",
